# haskell-big-integer-experiment

./: .gitignore  Makefile  haskell-big-integer-experiment.cabal  stack.yaml
GMP/: Integer.hs
GMP/GHC/: Integer.hs
GMP/GHC/Integer/: Logarithms.hs  Type.hs
GMP/GHC/Integer/GMP/: Internals.hs
GMP/GHC/Integer/Logarithms/: Internals.hs
